# kbcode

./: .env.example  .gitignore  AGENT.md  CLAUDE.md  CONCEPTS.md  CONTRIBUTING.md  IMPROVEMENTS.md  README.md  pyproject.toml  requirements.txt  suggesions.md
.claude/: settings.json
.claude/agents/: kb-maintainer.md  kb-slim.md  kb-verify.md
.claude/hooks/: kb_drift_check.py  kb_update_reminder.py
.github/workflows/: ci.yml
.playwright-mcp/: page-2026-07-02T04-57-17-958Z.yml  page-2026-07-02T04-58-32-263Z.yml  page-2026-07-02T04-58-42-002Z.yml  page-2026-07-02T05-08-12-309Z.yml  page-2026-07-02T05-09-43-011Z.yml
kb/: about-kb.md  about-you.md  architecture.md  changelog.md  cheatsheet.md  config.md  conventions.md  glossary.md  gotchas.md  mcp.md  overview.md  repl.md
kb/features/: config.md  context-management.md  edit-strategies.md  mcp.md  modes-subagents.md  providers.md  safety.md  sessions.md  tools-and-repair.md  vision.md
kbcode/: __init__.py  __main__.py  agent.py  checkpoints.py  cli.py  clipboard.py  compaction.py  config.py  hooks.py  images.py  interrupt.py  knowledge_base.py  lint.py  logs.py  memory.py  modes.py  permissions.py  pricing.py  prompt_input.py  prompts.py  provider.py  redact.py  repair.py  repl.py  sessions.py  subagents.py  tools.py  ui.py  videos.py  vision_fallback.py  wizard.py
kbcode/tools/: __init__.py  core.py  edit_strategies.py  file.py  kb.py  mcp.py  memory.py  planning.py  schemas.py  subagent.py  web.py
tests/: conftest.py  fake_mcp_server.py  test_agent.py  test_auto_mode.py  test_checkpoints.py  test_cli.py  test_clipboard.py  test_compaction.py  test_config.py  test_hooks.py  test_interrupt.py  test_knowledge_base.py  test_lint.py  test_logs.py  test_mcp.py  test_memory.py  test_modes.py  test_pricing.py  test_prompt_input.py  test_prompts.py  test_provider_caching.py  test_provider_streaming.py  test_redact.py  test_repair.py  test_sessions.py  test_subagents.py  test_tools_background.py  test_tools_core_repair.py  test_tools_diff.py  test_tools_file.py  test_tools_kb.py  test_tools_read_budget.py  test_tools_redaction.py  test_tools_safety.py  test_tools_search.py  test_tools_web.py  test_ui.py
tools/: kb-check.sh
tools/hooks/: pre-commit
